# ai-decision-bounary-assistant

./: .env.template  .gitignore  CHANGELOG.md  DEMO.md  DEMO_SCRIPT.md  LICENSE  MANIFEST.in  Makefile  README.md  cli.py  demo.py  pyproject.toml  requirements.txt  run_app.py  setup.py  start_demo.sh
config/: settings.py
docs/: api.md  development.md
examples/: basic_usage.py
src/: __init__.py
src/ai_decision_assistant/: __init__.py
src/ai_decision_assistant/core/: decision_analyzer.py  models.py
src/ai_decision_assistant/data/: __init__.py  sample_scenarios.py
src/ai_decision_assistant/ui/: app.py
src/ai_decision_assistant/utils/: exceptions.py  helpers.py
tests/: test_decision_assistant.py
